[package]
name = "twitimer"
version = "0.1.0"
authors = ["Richard Chen (iochen.com)"]
edition = "2021"
description = "A tool for scheduled tweet."
readme = "README.md"
homepage = "https://github.com/iochen/twitimer"
repository = "https://github.com/iochen/twitimer"
license = "MIT"
keywords = ["twitter"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.16"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
args = "2.0"
getopts = "0.2.21"
chrono = "0.4.19"
rusqlite = { version = "0.27.0", features = ["chrono"]}
regex = "1.5"
scopeguard = "1.1.0"
twitter-text = "0.2.0"
twitter_text_config = "0.2.0"
itertools = "0.10.2"
prettytable-rs = "0.8.0"
serde_json = "1.0.82"
serde = "1.0.138"
dirs = "4.0"